Fix deprecation warnings around `newInstance()` usage.
Replace all instances of `clazz.newInstance()` with `clazz.getDeclaredConstructor().newInstance()`.

This gets rid of the following warnings:

```
The method newInstance() from the type Class<ConstructorAccessBenchmark.SomeClass> is deprecated since version 9
```